--- a/settings/style.css
+++ b/settings/style.css
@@ -3,16 +3,34 @@ body {
   font-family: Verdana, Geneva, sans-serif;
 }
 
+.container {
+  margin: 0 auto;
+  width: 85%;
+}
+
 .title {
   background-color: #ff6600;
-  font-weight: bold;
   font-size: 10pt;
+  font-weight: bold;
   padding: 2px;
+}
+
+.buttons {
+  margin: 1em 0;
 }
 
 button {
   display: block;
   margin: 5px 0;
+}
+
+p {
+  margin: 1px 0;
+  font-size: 10pt;
+}
+
+a {
+  color: #000;
 }
 
 #upload {
